# audio-playground

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile.MSVC  README.md  bootstrap-vcpkg.sh  main.cpp  openalengine.cpp  openalengine.h  vcpkg.json
audio/: audio.cpp  audio.h  audiodrlibs.cpp  audiodrlibs.h  audiodrmp3.cpp  audiodrmp3.h  audiomp3.cpp  audiomp3.h  audiowav.cpp  audiowav.h
audioloaders/: CMakeLists.txt  audio.cpp  audio.h  audiodrmp3.cpp  audiodrmp3.h  audiodrwav.cpp  audiodrwav.h
audioprocessing/: CMakeLists.txt  audio.cpp  audio.h  audiodrmp3.cpp  audiodrwav.cpp  audiodrwav.h  audioprocessing.cpp  audioprocessing.h
jenkins/: Dockerfile  Jenkinsfile  Jenkinsfile.MSVC  msvc-dep-download.json  msvc-download-artifacts.sh
music/bensound/: README.md
openal-test/: CMakeLists.txt  TODO.txt  engine.cpp  engine.h  main.cpp
openalengine/: CMakeLists.txt  openalengine.cpp  openalengine.h
shadertoy/: CMakeLists.txt  README.md  defaultframebuffer.cpp  defaultframebuffer.h  framebuffer.h  framebufferrendertotexture.cpp  framebufferrendertotexture.h  shaderaudiotexture.cpp  shaderaudiotexture.h  shaderprogram.cpp  shaderprogram.h  shadertoyengine.cpp  shadertoyengine.h  shadertoyshaders.cpp  shadertoyshaders.h
shadertoy/shaders/: AudioSurf.frag  GeefrAudioTestAMP.frag  GeefrAudioTestFFT.frag  GeefrAudioTestFFT2.frag  GeefrGlitchBlobs.frag  GeefrSidewaysBeatEllipse.frag  GeefrSpectrumRing.frag  IQRayMarchPrimitives.frag  LEDSpectrum.frag  MatrixTunnelV3.frag  MatrixTunnelV3MixFFT.frag  PolTwistedRings.frag  README.md  TGMSeaScape.frag
tests/: CMakeLists.txt
tests/audio-stats/: CMakeLists.txt  main.cpp
tests/openal-play/: CMakeLists.txt  main.cpp
tests/opengl-visualiser/: CMakeLists.txt  README.md  main.cpp  opengl-visualiser.sh  ui.cpp  ui.h
